cmss/main/default/objects/UserCalendarSetting__c/UserCalendarSetting__c.object-meta.xml
<CustomObject>
    <description>Used for synchronisation with Google Calendar</description>
    <label>User Calendar Setting</label>
    <nameField>
        <displayFormat>UCS-{YYYY}-{MM}-{000000}</displayFormat>
        <label>User Calendar Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Calendar Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>