cmss/main/default/objects/UserCalendarSetting__c/fields/ResourceId__c.field-meta.xml
<CustomField>
    <fullName>ResourceId__c</fullName>
    <externalId>true</externalId>
    <label>Resource Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>