cmss/main/default/objects/UserCalendarSetting__c/fields/SyncActive__c.field-meta.xml
<CustomField>
    <fullName>SyncActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Active</label>
    <type>Checkbox</type>
</CustomField>