cmss/main/default/objects/UserCalendarSetting__c/fields/SyncToken__c.field-meta.xml
<CustomField>
    <fullName>SyncToken__c</fullName>
    <label>Sync Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>