cmss/main/default/objects/UserCalendarSetting__c/fields/UserCalendarID__c.field-meta.xml
<CustomField>
    <fullName>UserCalendarID__c</fullName>
    <externalId>true</externalId>
    <label>User Calendar ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>