cmss/main/default/objects/UserCalendarSetting__c/fields/WatchExpirationDateTime__c.field-meta.xml
<CustomField>
    <fullName>WatchExpirationDateTime__c</fullName>
    <label>Watch Expiration DateTime</label>
    <type>DateTime</type>
</CustomField>