cmss/main/default/objects/UserCalendarSetting__c/fields/WatchId__c.field-meta.xml
<CustomField>
    <fullName>WatchId__c</fullName>
    <label>Watch Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>